# dec25_bde_int_crypto

./: BTCUSDT_1h.csv  DASHBOARD_ACCESS.md  Dockerfile.grafana-api  GRAFANA_SETUP.md  README.md  binance_historical_collector.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test_binance_stream.py  test_producer.py
.github/: BADGE_EXAMPLE.md
.github/workflows/: README.md  test.yml
assets/: historical_data_collection.md  report-1.md
grafana/provisioning/dashboards/: crypto-realtime.json  dashboard.yml
grafana/provisioning/datasources/: crypto-api.yml  mongodb.yml
src/: constants.py
src/api/: grafana_api.py
src/config/: mongo_settings.py
src/database/: __init__.py  mongo_client.py  mongo_repository.py
src/mappers/: __init__.py  kline_mapper.py
src/models/: __init__.py  binance_models.py  models.py
src/service/: binance_historical_collector.py  kafka_client.py  mongo_repository.py  redpanda_consumer.py  stream_binance.py  stream_consumer.py  stream_producer.py
src/service/batch/: binance_historical_collector.py
src/service/stream/: __init__.py  consumer.py  message_processor.py  producer.py  websocket_manager.py
tests/: README.md
tests/database/: conftest.py  test_mongo_repository.py
tests/mappers/: __init__.py  fixtures.py  test_kline_mapper.py
tests/service/stream/: __init__.py  fixtures.py  test_message_processor.py
